Mon Mar 06 20:43:22 EST 2002	Mark Lilback <mark@lilback.com>

	* src/tds/config.c: does not do a lookup if passed an ip address. 
	compile flag added to not do reverse lookups on ip addresses.

Wed Feb 20 16:12:58 EST 2002	Brian Bruns	<camber@ais.org>

	* src/odbc/odbc.c: added SQL_DESC_TYPE to switch statement

Sun Feb 17 15:14:20 EST 2002	Brian Bruns	<camber@ais.org>
	* include/tds.h.in: add TDSLOCINFO structure and move date format stuff 
	to there.
	* include/cspublic.h: add locale pointer to CS_CONNECTION
	* include/tdsodbc.h: add locale pointer to _henv structure
	* src/tds/convert.c: strftime return not checked, broke sqsh
	* src/tds/login.c: tds_connect now takes locale parameter
	* src/tds/mem.c: add locales
	* src/dblib/dblib.c: fix call to tds_connect
	* src/dblib/ct.c: fix call to tds_connect
	* src/dblib/cs.c: add locales
	* src/pool/member.c: fix call to tds_connect
	* src/odbc/odbc.c: fix call to tds_connect
	* src/tds/locale.c: first implementation of locale conf file
	* locales.conf: sample locales.conf file

Thu Feb 14 22:08:17 EST 2002	Brian Bruns	<camber@ais.org>

	* include/tds.h.in: add date format config option
	* include/tdsconvert.h: pass tds to tds_convert
	* src/tds/mem.c: free date_fmt in socket and config
	* src/tds/login.c: copy date_fmt from config to socket struct
	* src/tds/convert.c: pass around TDSSOCKET where needed
	* src/tds/config.c: add date format option, don't lowercase values
	* src/dblib/dblib.c(dbconvert): pass to TDSSOCKET to tds_convert
	* src/ctlib/ct.c: pass TDSSOCKET to tds_convert
	* src/ctlib/cs.c: pass TDSSOCKET to tds_convert
	* src/odbc/odbc.c: pass TDSSOCKET to tds_convert

Sun Feb 10 21:30:05 EST 2002	Brian Bruns	<camber@ais.org>

	* configure.in: error if gmake not found
	* src/odbc/odbc.c: parameter bind support better
	* src/tds/write.c(tds_put_string): change to char * from ansi C
	 
Wed Feb  6 07:32:32 EST 2002	Brian Bruns	<camber@ais.org>

	* src/odbc/odbc.c(SQLGetInfo): added SQL_ACTIVE_STATEMENTS