@@ -1,10 +1,11 @@
-TESTS		=	t0001 t0002 t0003 t0004
-check_PROGRAMS	=	t0001 t0002 t0003 t0004
+TESTS		=	t0001 t0002 t0003 t0004 t0005
+check_PROGRAMS	=	t0001 t0002 t0003 t0004 t0005
 
 t0001_SOURCES	=	t0001.c common.c
 t0002_SOURCES	=	t0002.c common.c
 t0003_SOURCES	=	t0003.c common.c
 t0004_SOURCES	=	t0004.c common.c
+t0005_SOURCES	=	t0005.c common.c
 
 LIBS		=	../libct.la @NETWORK_LIBS@
 INCLUDES	=	-I$(top_srcdir)/include
