@@ -1,6 +1,6 @@
 SUBDIRS			=	unittests
 
 lib_LTLIBRARIES		=	libtds.la
-libtds_la_SOURCES	=	mem.c token.c util.c login.c read.c write.c convert.c numeric.c config.c query.c iconv.c locale.c
+libtds_la_SOURCES	=	mem.c token.c util.c login.c read.c write.c convert.c numeric.c config.c query.c iconv.c locale.c challenge.c
 INCLUDES		=	-I$(top_srcdir)/include
 LIBS		= @LIBICONV@
