@@ -24,7 +24,7 @@
 #include <time.h>
 #include <assert.h>
 
-static char  software_version[]   = "$Id: convert.c,v 1.9 2002/02/17 20:23:38 brianb Exp $";
+static char  software_version[]   = "$Id: convert.c,v 1.10 2002/03/15 02:01:41 brianb Exp $";
 static void *no_unused_var_warn[] = {software_version,
                                      no_unused_var_warn};
 
@@ -568,6 +568,7 @@ char tmpbuf[256];
 				dest[0]='\0';	/* set empty string and return */
 				return 0;
 			}
+			if (destlen<0) destlen = strlen(tmpbuf)+1;
 			if (destlen-1>ret) destlen = ret+1;
 			strncpy(dest,tmpbuf,destlen-1);
 			dest[destlen-1]='\0';
@@ -627,6 +628,7 @@ char tmpbuf[256];
 		dest[0]='\0';	/* set empty string and return */
 		return 0;
 	}
+	if (destlen<0) destlen = strlen(tmpbuf)+1;
 	if (destlen-1>ret) destlen = ret+1;
 	strncpy(dest,tmpbuf,destlen-1);
 	dest[destlen-1]='\0';
